--- a/view/index.html
+++ b/view/index.html
@@ -7,8 +7,8 @@
 <meta name="description" content="ホームページサンプル株式会社 | ホームページサンプル株式会社では最新技術と自然との調和を目指します。">
 <meta name="keywords" content="">
 <title>KICOシステムズ株式会社 | 社内ページ開発用</title>
-<link rel="stylesheet" href="style.css" type="text/css" media="screen">
-<script src="./js/angularjs.min.js"></script>
+<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen">
+<script src="../js/angularjs.min.js"></script>
 <script>
 	var myApp = angular.module('myApp', []);
 	myApp.controller('MainCtrl', ['$scope', function($scope){
@@ -37,16 +37,16 @@
 	<!-- トップナビゲーション -->
 	<ul id="topnav">
 		<li class="active"><a href="index.html">トップページ</a></li>
-		<li><a href="subpage.html">社員情報</a></li>
-		<li><a href="subpage.html">勤務集計</a></li>
-		<li><a href="subpage.html">勤務情報</a></li>
-		<li><a href="subpage.html">コミュニケーション</a></li>
-		<li><a href="subpage.html">E-Learning</a></li>
+		<li><a href="#">社員情報</a></li>
+		<li><a href="#">勤務集計</a></li>
+		<li><a href="#">勤務情報</a></li>
+		<li><a href="#">コミュニケーション</a></li>
+		<li><a href="#">E-Learning</a></li>
 	</ul>
 	<!-- トップナビゲーション -->
 	<!-- メイン画像 -->
 	<div id="mainBanner" class="mainImg">
-		<img src="images/mainImg.jpg" width="940" height="300" alt="">
+		<img src="../images/mainImg.jpg" width="940" height="300" alt="">
 		<div class="slogan">
 			<h2>Lorem ipsum dolor sit amet</h2>
 			<h3>Donec ut magna in dolor aliquet feugiat eu eget risus.</h3>
@@ -59,26 +59,26 @@
 		<h3>自然との調和を目指す企業です</h3>	
 			<p>ホームページサンプル株式会社では最新技術と自然との調和を目指します。革新的な技術で世の中を動かす企業を。ホームページサンプル株式会社では最新技術と自然との調和を目指します。革新的な技術で世の中を動かす企業を目指します。</p>
 			<p>ホームページサンプル株式会社では最新技術と自然との調和を目指します。革新的な技術で世の中を動かす企業を目指します。革新的な技術で世の中を動かす企業を目指します。革新的な技術で世の中を動かす企業を目指します。</p>
-			<p class="readmore"><a href="subpage.html">詳細を確認する</a></p>
+			<p class="readmore"><a href="#">詳細を確認する</a></p>
 		</article>
 		<article class="grid">
 			<h3>革新的な技術</h3>
 			<ul>
-				<li><a href="subpage.html">環境への取り組みについて</a></li>
-				<li><a href="subpage.html">ecoキャンペーン開催中です</a></li>
-				<li><a href="subpage.html">オフィスの移転に関して</a></li>
-				<li><a href="subpage.html">最新商品のご紹介</a></li>
-				<li><a href="subpage.html">新規サービスを開始しました</a></li>
+				<li><a href="#">環境への取り組みについて</a></li>
+				<li><a href="#">ecoキャンペーン開催中です</a></li>
+				<li><a href="#">オフィスの移転に関して</a></li>
+				<li><a href="#">最新商品のご紹介</a></li>
+				<li><a href="#">新規サービスを開始しました</a></li>
 			</ul>
 		</article>
 		<article class="grid">
 			<h3>ホームページサンプル</h3>
 			<ul>
-				<li><a href="subpage.html">環境への取り組みについて</a></li>
-				<li><a href="subpage.html">ecoキャンペーン開催中です</a></li>
-				<li><a href="subpage.html">オフィスの移転に関して</a></li>
-				<li><a href="subpage.html">最新商品のご紹介</a></li>
-				<li><a href="subpage.html">新規サービスを開始しました</a></li>
+				<li><a href="#">環境への取り組みについて</a></li>
+				<li><a href="#">ecoキャンペーン開催中です</a></li>
+				<li><a href="#">オフィスの移転に関して</a></li>
+				<li><a href="#">最新商品のご紹介</a></li>
+				<li><a href="#">新規サービスを開始しました</a></li>
 			</ul>
 		</article>
 	</section>
